# anchor-playground

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
app/: idl.ts  index.html  index.ts  package-lock.json  package.json
migrations/: deploy.ts
programs/anchor-playground/: Cargo.toml
programs/anchor-playground/src/: lib.rs
tests/: anchor-playground.spec.ts
